--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
     <!--spring配置文件-->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:/spring/applicationContext.xml</param-value>
+        <param-value>classpath:/spring/applicationContext*.xml</param-value>
     </context-param>
 
     <!-- Spring监听器 -->
