--- a/pom.xml
+++ b/pom.xml
@@ -26,18 +26,6 @@
     </properties>
     <!--设置版本号结束-->
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.eclipse.equinox/org.apache.jasper -->
-        <!--<dependency>
-            <groupId>org.eclipse.equinox</groupId>
-            <artifactId>org.apache.jasper</artifactId>
-            <version>5.5.17.v200806031609</version>
-        </dependency>-->
-
-        <!-- <dependency>
-             <groupId>org.apache.jasper</groupId>
-             <artifactId>org.apache.jasper</artifactId>
-             <version>5.5.17</version>
-         </dependency>-->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
@@ -143,12 +131,16 @@
             <artifactId>spring-core</artifactId>
             <version>${spring.version}</version>
         </dependency>
-
-        <!--<dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>${spring.version}</version>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-oxm</artifactId>
