[IMP]bootstrap table集成

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
     </properties>
     <!--设置版本号结束-->
     <dependencies>
+        <!-- mybatis分页插件依赖 -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>4.0.0</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
