--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,12 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
     <!--设置版本号结束-->
-    <dependencies>
+       <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.5.3</version>
+        </dependency>
         <!-- mybatis分页插件依赖 -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
@@ -404,6 +409,15 @@
 
     <build>
         <finalName>LearnSpring</finalName>
+        <filters>
+            <filter>src/main/resources/other.properties</filter>
+        </filters>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
