--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 driverClass=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/spring?characterEncoding=utf8
 username=root
-password=123456
+password=${password}
 #定义初始连接数
 initialSize=0
 #定义最大连接数
