--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 driverClass=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/spring?characterEncoding=utf8
+url=jdbc:mysql://localhost:3306/robot?characterEncoding=utf8
 username=root
 password=${password}
 #定义初始连接数
