--- a/pom.xml
+++ b/pom.xml
@@ -313,12 +313,12 @@
                 </configuration>
             </plugin>
             <!--mybatis自动注入插件 -->
-            <plugin>
+          <!--  <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
                 <version>1.3.5</version>
                 <configuration>
-                    <!--配置文件的位置-->
+                    &lt;!&ndash;配置文件的位置&ndash;&gt;
                     <configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
                     <verbose>true</verbose>
                     <overwrite>true</overwrite>
@@ -338,7 +338,7 @@
                         <version>1.3.5</version>
                     </dependency>
                 </dependencies>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 </project>
