--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,9 @@
          version="3.1">
 
     <display-name>Spring MVC Application</display-name>
-
+  <welcome-file-list>
+      <welcome-file></welcome-file>
+  </welcome-file-list>
     <!--spring配置文件-->
     <context-param>
         <param-name>contextConfigLocation</param-name>
@@ -36,14 +38,14 @@
     <!-- Spring MVC servlet结束-->
 
     <!--spring security配置-->
-    <filter>
+   <!-- <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    </filter-mapping>-->
     <!--spring security配置结束-->
 
     <!--spring字符过滤器-->
